--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 								<li><a href="#Introduccion"> Introduccion </a></li>
 								<li><a href="#sostenibilidad"> Sostenibilidad  </a></li>
-								<li><a href="#mezcales"> Mezcales Exoticos y Silvestres </a></li>
-								<li><a href="#maestro"> El arte detras  </a></li>
+								<li><a href="#mezcales"> Mezcales  </a></li>
+								<li><a href="#maestro"> El Arte  </a></li>
 								<li><a href="#nosotros"> Nosotros </a></li>
 								<li><a href="#tienda"> Tienda </a></li>
 								<li><a href="#contacto"> Contacto </a></li>
