--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 								<h2 class="major"> Maestros Mezcaleros </h2>
 								<span class="image main"><img src="images/maestra.jpg" alt="" /></span>
 								<p>
-								No hay arte sin emocion. Ni Mezcal, ni fuego, ni manos que lo trabajan. Detras de cada Mezcal, existe un artista.  
+								No hay arte sin emocion. Ni Mezcal, ni fuego, ni manos que lo trabajan. Detras de cada Mezcal, el arte se cocina, fermenta y evapora. El Maestro mezcalero, es
+								el encargado de hacer unico y especial el futuro momento. 
 								</p>
 							</article>
 
